-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
58fd34539 (15.0)
with a [ (opening bracket) or ] (closing bracket) as any filter-value (column-filter or path filter) the server response is
Axivion: HttpError (https://dashboard.axivion.com/master/windows/api/projects/AvalonEdit-cafesharp/issues?kind=AV&start=2021-04-27T23:34:32.926052Z&end=2024-02-05T07:22:24.846407Z&user=anybody&filter_any path=[&offset=0&limit=2048&computeTotalRowCount=true) 400: <!doctype html><html lang="en"><head><title>HTTP Status 400 - Bad Request</title><style type="text/css">body {font-family:Tahoma,Arial,sans-serif;} h1, h2, h3, b {color:white;background-color:#525D76;} h1 {font-size:22px;} h2 {font-size:16px;} h3 {font-size:14px;} p {font-size:12px;} a {color:black;} .line {height:1px;background-color:#525D76;border:none;}</style></head><body><h1>HTTP Status 400 - Bad Request</h1><hr class="line" /><p><b>Type</b> Exception Report</p><p><b>Message</b> Invalid character found in the request target [/master/windows/api/projects/AvalonEdit-cafesharp/issues?kind=AV&start=2021-04-27T23:34:32.926052Z&end=2024-02-05T07:22:24.846407Z&user=anybody&filter_any%20path=[&offset=0&limit=2048&computeTotalRowCount=true ]. The valid characters are defined in RFC 7230 and RFC 3986</p><p><b>Description</b> The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).</p><p><b>Exception</b></p><pre>java.lang.IllegalArgumentException: Invalid character found in the request target [/master/windows/api/projects/AvalonEdit-cafesharp/issues?kind=AV&start=2021-04-27T23:34:32.926052Z&end=2024-02-05T07:22:24.846407Z&user=anybody&filter_any%20path=[&offset=0&limit=2048&computeTotalRowCount=true ]. The valid characters are defined in RFC 7230 and RFC 3986 org.apache.coyote.http11.Http11InputBuffer.parseRequestLine(Http11InputBuffer.java:482) org.apache.coyote.http11.Http11Processor.service(Http11Processor.java:256) org.apache.coyote.AbstractProcessorLight.process(AbstractProcessorLight.java:63) org.apache.coyote.AbstractProtocol$ConnectionHandler.process(AbstractProtocol.java:937) org.apache.tomcat.util.net.NioEndpoint$SocketProcessor.doRun(NioEndpoint.java:1791) org.apache.tomcat.util.net.SocketProcessorBase.run(SocketProcessorBase.java:52) org.apache.tomcat.util.threads.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1190) org.apache.tomcat.util.threads.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:659) org.apache.tomcat.util.threads.TaskThread$WrappingRunnable.run(TaskThread.java:63) java.base/java.lang.Thread.run(Thread.java:833) </pre><p><b>Note</b> The full stack trace of the root cause is available in the server logs.</p><hr class="line" /><h3>Apache Tomcat/9.0.96</h3></body></html>
while the expected response (returned when using the same filter from within the browser-UI) is:
{ "dashboardVersionNumber": "7.9.0.15928", "type": "InvalidFilterException", "message": "Illegal filter: [", "localizedMessage": "Illegal filter: [", "supportAddress": "support@axivion.com", "displayServerBugHint": false, "data": { "help": "/master/macos/filterhelp#basic_examples", "column": "any path" } }
which leads me to believe, that the URL-building of the filter URIs is not done properly.
- relates to
-
QTCREATORBUG-31782 Error handling on Dashboard should handle some cases more specifically
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-31790 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
597412,2 | Axivion: Fix encoding of filter expression | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |