Axivion: Fix encoding of filter expression

Fixes: QTCREATORBUG-31790
Change-Id: I6819ad3d175f99894cdc1dc16c0141fab4c444e3
Reviewed-by: Mohammad Mehdi Salem Naraghi <mehdi.salem@qt.io>
Reviewed-by: hjk <hjk@qt.io>